--- a/week_07/club2/build.gradle
+++ b/week_07/club2/build.gradle
@@ -11,10 +11,11 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.gf'
+group = 'com.avangers'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -24,11 +25,11 @@ repositories {
 
 
 dependencies {
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
+    runtimeOnly('mysql:mysql-connector-java')
     compileOnly('org.projectlombok:lombok')
-    compileOnly('org.springframework.boot:spring-boot-starter-data-jpa')
-    compileOnly('mysql:mysql-connector-java')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
