--- a/week_08/day01/connectmysql/build.gradle
+++ b/week_08/day01/connectmysql/build.gradle
@@ -23,7 +23,6 @@ repositories {
     mavenCentral()
 }
 
-
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
@@ -32,7 +31,8 @@ dependencies {
     runtimeOnly('mysql:mysql-connector-java')
     compileOnly('org.projectlombok:lombok')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-    compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7-1'
-    compile group: 'org.webjars.bower', name: 'jquery', version: '3.2.1'
+    compile group: 'org.webjars', name: 'bootstrap', version: '4.1.3'
+    compile group: 'org.webjars.bower', name: 'jquery', version: '3.3.1'
     compile 'org.webjars:materializecss:0.96.0'
+    compile group: 'org.webjars', name: 'font-awesome', version: '5.6.1'
 }
