--- a/week_08/day01/connectmysql/src/main/resources/application.properties
+++ b/week_08/day01/connectmysql/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/todo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Fc7ybuONYsz6M6uwwc7p
+spring.datasource.username=todouser
+spring.datasource.password=tiptop357
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=debug
