Upd: added templates to project. Refactoring PostController class and removed Lombok dependency

--- a/week_08/04_redditproject/src/main/resources/application.properties
+++ b/week_08/04_redditproject/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/post?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=reddituser
-spring.datasource.password=tiptop357
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.username=root
+spring.datasource.password=Fc7ybuONYsz6M6uwwc7p
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
