--- a/week_09/day01_restbackend/build.gradle
+++ b/week_09/day01_restbackend/build.gradle
@@ -27,6 +27,8 @@ repositories {
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation('org.springframework.boot:spring-boot-starter-web')
+    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.2.Final'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
