--- a/week_09/example_exam2/src/main/resources/application.properties
+++ b/week_09/example_exam2/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost/attractions_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=attractionsuser
-spring.datasource.password=psswrd
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${MYSQL_URL_DB}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASS}
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
