--- a/foundation_and_orientation_phase/week_08/01_todowitddatabase/connectmysql/build.gradle
+++ b/foundation_and_orientation_phase/week_08/01_todowitddatabase/connectmysql/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     runtimeOnly('mysql:mysql-connector-java')
-    compileOnly('org.projectlombok:lombok')
+testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     compile group: 'org.webjars', name: 'bootstrap', version: '4.1.3'
     compile group: 'org.webjars.bower', name: 'jquery', version: '3.3.1'
